Add a class alias in SessionWindowUnarchiver.

CL https://codereview.chromium.org/2687353003 renamed the class
CRWNavigationManagerStorage to CRWSessionStorage but didn't add
the mapping to SessionWindowUnarchiver causing the restoration
of saved session in branch 3005 to fail in later branches.

BUG=698750

Review-Url: https://codereview.chromium.org/2731403002
Cr-Commit-Position: refs/heads/master@{#455000}

Former-commit-id: 8fb2aaae1f672153aac52e747c67a7c181dcc0a9